--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,6 @@
-pandoc: 2.19.2
-pkgdown: 2.0.6
+pandoc: '2.12'
+pkgdown: 2.1.1
 pkgdown_sha: ~
-articles: {}
-last_built: 2023-01-05T19:11Z
-urls:
-  reference: https://kharchenkolab.github.io/scistreer/reference
-  article: https://kharchenkolab.github.io/scistreer/articles
-
+articles:
+  tutorial: tutorial.html
+last_built: 2025-03-20T17:32Z
