--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(add_conf)
 export(collect_chains)
 export(convert_liks_to_logP_list)
+export(convert_logliks_to_logP_list)
 export(decode_tree)
 export(decode_tree_brl)
 export(estimate_brl_par)
@@ -10,15 +11,17 @@ export(get_consensus)
 export(get_leaf_liks)
 export(get_transition_mat_wf)
 export(get_vaf_bins)
-export(logSumExp)
 export(optimize_tree)
 export(optimize_tree_cpp)
+export(phylo_to_gtree)
 export(plot_phylo_heatmap2)
 export(reorder_phylo)
 export(run_mitodrift)
 export(run_tree_mcmc)
 export(run_tree_mcmc_cpp)
 export(run_tree_mcmc_r)
+export(to_phylo_reorder)
+export(trim_tree)
 import(dplyr)
 import(stringr)
 import(tidygraph)
