--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,9 @@ Imports:
     dplyr,
     tidygraph,
     tidyr,
+    TreeTools,
     parallel,
+    phytools,
     ggtree,
     ggraph,
     optparse,
