update fit param

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,13 @@ export(decode_tree_brl)
 export(estimate_brl_par)
 export(get_consensus)
 export(get_leaf_liks)
+export(get_leaf_liks_mat)
 export(get_transition_mat_wf)
+export(get_transition_mat_wf_hmm)
+export(get_transition_mat_wf_hmm_wrapper)
 export(get_vaf_bins)
+export(long_to_mat)
+export(make_rooted_nj)
 export(optimize_tree)
 export(optimize_tree_cpp)
 export(parse_conf)
