--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: mitodrift
-Title: Resolving single-cell lineage history using mitochondrial mutation drift dynamics
-Version: 0.0.0.9000
+Title: Reconstructing single-cell lineage history using mitochondrial mutation drift dynamics
+Version: 1.0.0
 Authors@R: 
     person("Teng", "Gao", , "tgao@broadinstitute.org", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-0196-689X"))
-Description: Resolving single cell lineage history using drift dynamics of mitochondrial mutations
+Description: Reconstructing single cell lineage history using drift dynamics of mitochondrial mutations
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
