parallelize prop.clades and add fit_param convergence checker

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(optimize_tree_cpp)
 export(parse_conf)
 export(phylo_to_gtree)
 export(plot_phylo_heatmap2)
+export(prop.clades.par)
 export(reorder_phylo)
 export(run_tree_mcmc)
 export(run_tree_mcmc_cpp)
@@ -33,6 +34,7 @@ export(run_tree_mcmc_r)
 export(to_phylo_reorder)
 export(trim_tree)
 import(dplyr)
+import(fmcmc)
 import(stringr)
 import(tidygraph)
 importFrom(ape,drop.tip)
