--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,11 +14,13 @@ export(getConfidentClades)
 export(get_consensus)
 export(get_leaf_liks)
 export(get_leaf_liks_mat)
+export(get_leaf_liks_mat_old)
 export(get_param_lik_cpp)
 export(get_transition_mat_wf)
 export(get_transition_mat_wf_hmm)
 export(get_transition_mat_wf_hmm_wrapper)
 export(get_vaf_bins)
+export(logSumExp)
 export(long_to_mat)
 export(make_rooted_nj)
 export(optimize_tree)
