--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(convert_logliks_to_logP_list)
 export(decode_tree)
 export(decode_tree_brl)
 export(estimate_brl_par)
+export(fit_params_em_par)
 export(fit_params_mcmc)
 export(getConfidentClades)
 export(get_consensus)
