--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,9 @@ export(convert_liks_to_logP_list)
 export(convert_logliks_to_logP_list)
 export(decode_tree)
 export(decode_tree_brl)
+export(decode_tree_em)
 export(estimate_brl_par)
+export(fit_params_em)
 export(fit_params_em_par)
 export(fit_params_mcmc)
 export(getConfidentClades)
