onlly save Elist

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(add_conf)
 export(collect_chains)
 export(convert_liks_to_logP_list)
 export(convert_logliks_to_logP_list)
+export(convert_logliks_to_logP_list_colmajor)
 export(decode_tree)
 export(decode_tree_brl)
 export(decode_tree_em)
@@ -26,6 +27,7 @@ export(get_vaf_bins)
 export(logSumExp)
 export(long_to_mat)
 export(make_rooted_nj)
+export(mat_to_long)
 export(optimize_tree)
 export(optimize_tree_cpp)
 export(parse_conf)
@@ -34,6 +36,7 @@ export(plot_phylo_heatmap2)
 export(prop.clades.par)
 export(reorder_phylo)
 export(run_tree_mcmc)
+export(run_tree_mcmc_batch)
 export(run_tree_mcmc_cpp)
 export(run_tree_mcmc_r)
 export(to_phylo_reorder)
