adding mcmc diagnostics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(MitoDrift)
 export(add_clade_freq)
 export(add_conf)
 export(collect_chains)
+export(compute_target_tree_asdsf)
+export(compute_target_tree_asdsf_sliding)
 export(convert_liks_to_logP_list)
 export(convert_logliks_to_logP_list)
 export(convert_logliks_to_logP_list_colmajor)
