--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,7 @@ Imports:
     R6
 Suggests:
     testthat (>= 3.0.0)
-LinkingTo: Rcpp, RcppArmadillo, RcppParallel
+LinkingTo: Rcpp, RcppArmadillo, RcppParallel, qs2
 NeedsCompilation: yes
 SystemRequirements: GNU make
 Maintainer: Teng Gao <tgaoteng@gmail.com>
