remove ncores_em

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(decode_tree_brl)
 export(decode_tree_em)
 export(estimate_brl_par)
 export(fit_params_em)
+export(fit_params_em_cpp)
 export(fit_params_mcmc)
 export(getConfidentClades)
 export(get_consensus)
@@ -40,6 +41,7 @@ export(run_tree_mcmc)
 export(run_tree_mcmc_batch)
 export(run_tree_mcmc_cpp)
 export(run_tree_mcmc_r)
+export(save_qd_cpp)
 export(to_phylo_reorder)
 export(trim_tree)
 import(dplyr)
