--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(getConfidentClades)
 export(get_consensus)
 export(get_leaf_liks)
 export(get_leaf_liks_mat)
+export(get_leaf_liks_mat_cpp)
 export(get_leaf_liks_mat_old)
 export(get_param_lik_cpp)
 export(get_transition_mat_wf)
