--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(optimize_tree)
 export(optimize_tree_cpp)
 export(parse_conf)
 export(phylo_to_gtree)
+export(plot_phylo_circ)
 export(plot_phylo_heatmap2)
 export(prop.clades.par)
 export(reorder_phylo)
@@ -43,8 +44,11 @@ export(run_tree_mcmc_batch)
 export(run_tree_mcmc_cpp)
 export(run_tree_mcmc_r)
 export(save_qd_cpp)
+export(smooth_features_phylo)
 export(to_phylo_reorder)
 export(trim_tree)
+export(trim_tree_exp)
+export(trim_tree_size)
 import(dplyr)
 import(fmcmc)
 import(stringr)
