--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(prop.clades.par)
 export(reorder_phylo)
 export(run_tree_mcmc)
 export(run_tree_mcmc_batch)
+export(run_tree_mcmc_batch_uniform)
 export(run_tree_mcmc_cpp)
 export(run_tree_mcmc_r)
 export(save_qd_cpp)
