--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(phylo_to_gtree)
 export(plot_phylo_circ)
 export(plot_phylo_heatmap2)
 export(prop.clades.par)
+export(prop_clades_par_bm_se)
 export(reorder_phylo)
 export(run_tree_mcmc)
 export(run_tree_mcmc_batch)
