--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(MitoDrift)
 export(add_clade_freq)
 export(add_conf)
+export(assign_clones_polytomy)
 export(collect_chains)
 export(compute_target_tree_asdsf)
 export(compute_target_tree_asdsf_sliding)
@@ -48,7 +49,6 @@ export(smooth_features_phylo)
 export(to_phylo_reorder)
 export(trim_tree)
 export(trim_tree_exp)
-export(trim_tree_size)
 import(dplyr)
 import(fmcmc)
 import(stringr)
