--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,74 @@
-url: 
+url: https://teng-gao.github.io/mitodrift/
+
 template:
   bootstrap: 5
+  bslib:
+    primary: "#2C5AA0"
+    base_font: {google: "Inter"}
 
+navbar:
+  structure:
+    left: [home, articles, reference, news]
+    right: [github]
+  components:
+    home:
+      icon: fa-home
+      href: index.html
+    github:
+      icon: fa-github
+      href: https://github.com/teng-gao/mitodrift
+
+home:
+  title: "MitoDrift"
+  description: "Reconstruct single-cell lineage history from mtDNA heteroplasmy drift with confidence-calibrated phylogenies."
+
+articles:
+  - title: Tutorials
+    contents:
+      - tutorial
+
+reference:
+  - title: Core workflow
+    contents:
+      - MitoDrift
+      - fit_params_em
+      - fit_params_em_cpp
+      - fit_params_mcmc
+      - decode_tree_em
+      - make_rooted_nj
+  - title: Clades and support
+    contents:
+      - compute_target_tree_asdsf
+      - compute_target_tree_asdsf_sliding
+      - get_asdsfs
+      - get_slide_freq_table
+      - prop.clades.par
+      - add_clade_freq
+      - add_node_names
+  - title: Trimming and clones
+    contents:
+      - trim_tree
+      - trim_tree_exp
+      - assign_clones_polytomy
+  - title: Likelihood helpers
+    contents:
+      - get_leaf_liks_mat
+      - get_leaf_liks_mat_cpp
+      - get_leaf_liks_mat_old
+      - get_transition_mat_wf_hmm
+      - get_transition_mat_wf_hmm_wrapper
+      - get_param_lik_cpp
+      - save_qd_cpp
+      - logSumExp
+  - title: Visualization
+    contents:
+      - plot_phylo_circ
+      - plot_phylo_heatmap2
+      - smooth_features_phylo
+  - title: Data utilities
+    contents:
+      - mat_to_long
+      - long_to_mat
+      - find_root
+      - find_root_split
+      - phylo_to_gtree
