--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,51 +2,27 @@
 
 export(MitoDrift)
 export(add_clade_freq)
-export(add_conf)
+export(add_node_names)
 export(assign_clones_polytomy)
 export(collect_chains)
 export(compute_target_tree_asdsf)
-export(compute_target_tree_asdsf_sliding)
-export(convert_liks_to_logP_list)
 export(convert_logliks_to_logP_list)
-export(convert_logliks_to_logP_list_colmajor)
 export(decode_tree)
-export(decode_tree_brl)
-export(decode_tree_em)
-export(estimate_brl_par)
-export(fit_params_em)
 export(fit_params_em_cpp)
-export(fit_params_mcmc)
-export(getConfidentClades)
-export(get_consensus)
-export(get_leaf_liks)
-export(get_leaf_liks_mat)
 export(get_leaf_liks_mat_cpp)
-export(get_leaf_liks_mat_old)
-export(get_param_lik_cpp)
-export(get_transition_mat_wf)
 export(get_transition_mat_wf_hmm)
-export(get_transition_mat_wf_hmm_wrapper)
 export(get_vaf_bins)
 export(logSumExp)
 export(long_to_mat)
 export(make_rooted_nj)
 export(mat_to_long)
-export(optimize_tree)
 export(optimize_tree_cpp)
-export(parse_conf)
 export(phylo_to_gtree)
 export(plot_phylo_circ)
 export(plot_phylo_heatmap2)
-export(prop.clades.par)
 export(reorder_phylo)
-export(run_tree_mcmc)
 export(run_tree_mcmc_batch)
-export(run_tree_mcmc_cpp)
-export(run_tree_mcmc_r)
 export(save_qd_cpp)
-export(smooth_features_phylo)
-export(to_phylo_reorder)
 export(trim_tree)
 export(trim_tree_exp)
 import(dplyr)
