--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,11 +20,14 @@ export(trim_tree)
 export(trim_tree_exp)
 import(dplyr)
 import(fmcmc)
+import(ggplot2)
+import(ggtree)
 import(stringr)
 import(tidygraph)
 importFrom(ape,drop.tip)
 importFrom(ape,nj)
 importFrom(ape,root)
+importFrom(glue,glue)
 importFrom(igraph,"E<-")
 importFrom(igraph,"V<-")
 importFrom(igraph,E)
