--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,27 +15,38 @@ Depends:
 biocViews:
 Imports:
     ape,
-    igraph,
-    ggplot2,
+    data.table,
     dplyr,
+    expm,
+    fmcmc,
+    ggplot2,
+    ggnewscale,
+    ggraph,
+    ggrastr,
+    ggtree,
+    glue,
+    igraph,
+    parallel,
+    parallelDist,
+    phangorn,
+    phytools,
     qs2,
+    R6,
+    RcppParallel,
+    reshape2,
+    RhpcBLASctl,
+    rlang,
+    scales,
+    stringr,
+    tibble,
     tidygraph,
     tidyr,
-    TreeTools,
-    parallel,
-    phytools,
-    ggtree,
-    ggraph,
+    TreeTools
+Suggests:
+    knitr,
     optparse,
     patchwork,
-    parallelDist,
-    RhpcBLASctl,
-    phangorn,
-    glue,
-    fmcmc,
-    stringr,
-    R6
-Suggests:
+    rmarkdown,
     testthat (>= 3.0.0)
 LinkingTo: Rcpp, RcppArmadillo, RcppParallel, qs2
 NeedsCompilation: yes
@@ -43,3 +54,4 @@ SystemRequirements: GNU make
 Maintainer: Teng Gao <tgaoteng@gmail.com>
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+VignetteBuilder: knitr
