--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ import(tidygraph)
 importFrom(ape,drop.tip)
 importFrom(ape,nj)
 importFrom(ape,root)
+importFrom(ggtreeExtra,geom_fruit)
 importFrom(glue,glue)
 importFrom(igraph,"E<-")
 importFrom(igraph,"V<-")
